<resources>
	<string name="app_name">Attendance Manager</string>
	<string name="username_et">Username</string>
	<string name="password_et">Password</string>
	<string name="create_account">No account yet? Create one</string>
	<string name="login">Login</string>
	<string name="logo_image">logo_image</string>
	<string name="confirm_password">Confirm password</string>
	<string name="sign_up">Sign Up</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
</resources>
