<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/colorPrimaryLight"
	android:fitsSystemWindows="true"
	tools:context="bk.attendancemanager.SignupActivity">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="vertical"
		android:paddingLeft="24dp"
		android:paddingRight="24dp"
		android:paddingTop="56dp">
		
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="72dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="24dp"
			android:contentDescription="@string/logo_image"
			android:src="@mipmap/ic_launcher"/>
		
		<!-- Email Label -->
		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/text_input_layout_theme">
			
			<EditText
				android:id="@+id/login_et_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginTop="8dp"
				android:hint="@string/username_et"
				android:inputType="textEmailAddress"
				android:textColor="#fff"/>
		</android.support.design.widget.TextInputLayout>
		
		<!-- Password Label -->
		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:theme="@style/text_input_layout_theme">
			
			<EditText
				android:id="@+id/login_et_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password_et"
				android:inputType="textPassword"
				android:textColor="#fff"/>
		</android.support.design.widget.TextInputLayout>
		
		<android.support.design.widget.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp"
			android:theme="@style/text_input_layout_theme">
			
			<EditText
				android:id="@+id/login_et_confirm_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/confirm_password"
				android:inputType="textPassword"
				android:textColor="#fff"/>
		</android.support.design.widget.TextInputLayout>
		
		<android.support.v7.widget.AppCompatButton
			android:id="@+id/login_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			android:layout_marginTop="24dp"
			android:background="@drawable/button_no_radius"
			android:padding="12dp"
			android:text="@string/sign_up"
			android:textColor="@color/colorPrimaryText"/>
	</LinearLayout>
</RelativeLayout>